# social-media-agent-tactipus

./: .env.full.example  .gitignore  README.md  langgraph.json  package-lock.json  package.json
memory-v2/: Makefile  langgraph.json  pyproject.toml
memory-v2/memory_v2/: graph.py  state.py
scripts/: backfill.ts  checkLanggraphPaths.js  generate-demo-post.ts
scripts/crons/: create-cron.ts  list-crons.ts
src/agents/: utils.ts
src/agents/curate-data/: constants.ts  index.ts  sources.ts  state.ts  types.ts
src/agents/curate-reports/: index.ts  state.ts  types.ts
src/agents/find-images/: find-images-graph.ts
src/agents/generate-post/: generate-post-graph.ts  generate-post-state.ts
src/agents/generate-report/: index.ts  prompts.ts  state.ts
src/agents/generate-thread/: index.ts  state.ts  types.ts  utils.ts
src/agents/ingest-data/: ingest-data-graph.ts
src/agents/reflection/: index.ts
src/agents/supervisor/: supervisor-graph.ts  supervisor-state.ts  types.ts
src/agents/upload-post/: index.ts
src/agents/verify-links/: verify-links-graph.ts  verify-links-state.ts
src/agents/verify-reddit-post/: types.ts  utils.ts  verify-reddit-post-graph.ts  verify-reddit-post-state.ts
src/agents/verify-tweet/: verify-tweet-state.ts
src/clients/: linkedin.ts
src/clients/reddit/: client.ts  get-user-less-token.ts  snoowrap.ts  types.ts
src/clients/twitter/: client.ts  utils.ts
src/evals/e2e/: e2e.int.test.ts
src/tests/: graph.int.test.ts
src/utils/: create-dir.ts  delay-run.ts  firecrawl.ts  github-repo-contents.ts  reflections.ts
(+122 files in other folders)
