[tool.poetry]
name = "memory-v2"
version = "0.0.1"
description = "Memory graph for the Social Media Agent."
authors = ["Brace Sproul"]
readme = "README.md"
license = "MIT"
packages = [{include = "memory_v2"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
langmem = ">=0.0.5rc5"
langgraph = ">=0.2.66"
langchain-anthropic = ">=0.3.3"
langgraph-sdk = ">=0.1.51"
python-dotenv = ">=1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
ruff = ">=0.6.1"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"